--- a/506_group_project.Rmd
+++ b/506_group_project.Rmd
@@ -93,7 +93,7 @@ AQ=
   filter(is.finite(pm2.5_log))
 ```
 
-The **Box-Cox** plot suggests a log transformation for the response variable. We then drop the outliers and draw the boxplot for response grouped by the variable **cdwd**.
+The **Box-Cox** plot suggests a log transformation for the response variable. We then drop the outliers and draw the boxplot for response grouped by the variable **cbwd**.
 
 ```{r boxplot, warning=FALSE, echo=TRUE}
 qplot(cbwd, pm2.5_log, facets = . ~ cbwd, 
@@ -352,7 +352,6 @@ Second, when there are many variables, it will be more difficult to find which o
 Therefore, we should pay more attention to model selection when applying Linear Mixed Effects Model. 
 In addition, in R, when we use different packages, we should consider which model to use to fit the dataaset. 
 In lmer function(from lme4 library), we used the suggested model, but similarly, in lme function(from nlme library), we got the approximately same result.
-Lastly, the method chosen from **REML** and **ML**(options in the two functions) to do regression should be taken into consideration.
 
 ## Data source
 [**Beijing PM2.5 Data Data Set** from UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/machine-learning-databases/00381/PRSA_data_2010.1.1-2014.12.31.csv)
