--- a/506_group_project.Rmd
+++ b/506_group_project.Rmd
@@ -30,7 +30,7 @@ knitr::include_graphics("image.png")
 
 
 ##Model Introduction
-Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors like gender, population, continents, and seasons.
+Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors(eg. gender, population, continents, and seasons).
 When fitting a complicated models with many parameters and observations, the data points might not be truly independent from each other. For example, 
 all observations from a meterological dataset could be collected on the same site. Therefore, mixed models were developed to overcome such problem 
 and let us to be able to use all of our data. Mixed models are applied in many disciplines where multiple correlated measurements are made on each unit of interest.
