--- a/506_group_project.Rmd
+++ b/506_group_project.Rmd
@@ -1,14 +1,12 @@
 ---
 title: " Linear Mixed Effects Models in R and Python"
-author: "Guanghui Min, Jaehoon Lee, Jiali Luan"
+author: "Jaehoon Lee, Jiali Luan, Guanghui Min"
 date: "11/26/2018"
 output: html_document
 ---
 
 ##Topic Introduction
-Beijing's air pollution poses a big threat to the health of local residents. The PM 2.5 Index has been known as an important indication of the air quality.
-We use the data from the link[**Beijing PM2.5 Data Data Set** from UCI Machine Learning Repository]
-https://archive.ics.uci.edu/ml/machine-learning-databases/00381/PRSA_data_2010.1.1-2014.12.31.csv).
+Beijing's air pollution poses a big threat to the health of local residents. The PM 2.5 Index has been known as an important indication of the air quality. 
 Exploring an effective way of predicting PM 2.5 Index will be an important step towards addressing the pollution. However, various factors such as dew point, temperature, pressure, etc.
 may influence PM 2.5 and the relationships between them remain unclear. Thus, it is challenging to accurately predict PM 2.5. To address this problem, 
 Linear Mixed Effects Model is adopted to predict the response variable (ie. air quality) based on the numerous explanatory variables (meteorological records).
@@ -23,6 +21,9 @@ library(faraway)
 library(stargazer)
 ```
 
+```{r source, include=FALSE}
+source('./group_project.R')
+```
 
 ```{r pm2.5, echo=FALSE, fig.align='center', out.width = '30%'}
 knitr::include_graphics("image.png")
@@ -30,7 +31,7 @@ knitr::include_graphics("image.png")
 
 
 ##Model Introduction
-Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors(eg. gender, population, continents, and seasons).
+Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors like gender, population, continents, and seasons.
 When fitting a complicated models with many parameters and observations, the data points might not be truly independent from each other. For example, 
 all observations from a meterological dataset could be collected on the same site. Therefore, mixed models were developed to overcome such problem 
 and let us to be able to use all of our data. Mixed models are applied in many disciplines where multiple correlated measurements are made on each unit of interest.
@@ -44,7 +45,7 @@ In a linear mixed effects model, $Z\gamma$ are being added. $Z$ corresponds to r
 
 
 ##Data Description
-The PM 2.5 Index dataset includes 43824 observations and 12 attributes. Here is a table of the attributes' information.
+The [**Beijing PM2.5 Data Data Set**](https://archive.ics.uci.edu/ml/machine-learning-databases/00381/PRSA_data_2010.1.1-2014.12.31.csv) is from UCI Machine Learning Repository.The PM 2.5 Index dataset includes 43824 observations and 12 attributes. Here is a table of the attributes' information.
 ```{r, echo=FALSE}
 var_dis = read.csv("Variable_Description.csv")
 colname = c("Variable",	"Description", "Data Type")
@@ -52,13 +53,11 @@ colnames(var_dis) = colname
 knitr::kable(var_dis)
 ```
 
+##Overview
+For this project, we will be using packagen **lme4** and **nlme** in R and package **statsmodels** in python to evaluate the important causes that contribute to PM2.5 in Beijing, China. Due to the skewness of PM2.5 against variable “cbwd”, we choose to do a log transformation on the response variable. The way we pick out the best model to fit is by plotting log(PM2.5) against every predictor in different wind directions. We also have summarized and compared our result in the conclusion.
 
-## Three Approaches {.tabset .tabset-fade}
 
-### **lme4** in R
-```{r source, include=FALSE}
-source('./group_project.R')
-```
+##Data Preprocessing
 
 We first preprocess the data before fitting a model. 
 ```{r load_data, warning=FALSE, echo=TRUE}
@@ -85,7 +84,7 @@ We can see that the data is seriously left-skewed, so we need to do some transfo
 ```{r boxcox, warning=FALSE, echo=TRUE}
 # draw the box-cox plot
 g =lm(pm2.5~., data = AQ)
-#boxcox(g,plotit=T)
+boxcox(g,plotit=T)
 # the plot a log transformation for the response 
 AQ=
   AQ%>%
@@ -103,12 +102,12 @@ qplot(cbwd, pm2.5_log, facets = . ~ cbwd,
 We can see that the response shows difference in different groups. It is resasonable to establish the following model:
 
 
-$$pm2.5=year+month+day+hour+pm2.5+DEWP+TEMP+PRES+Iws+Is+Ir+(1|cbwd)+\epsilon$$
+$$log(pm2.5)=year+month+day+hour+pm2.5+DEWP+TEMP+PRES+Iws+Is+Ir+(1|cbwd)+\epsilon$$
 
-In the models above, we assumed that the effect of predictors was the same for all wind directions. However, the effect of politeness might be different for different subjects. 
+In the models above, we assumed that the effect of predictors was the same for all wind directions. However, the effect of other predictors might be different for different subjects. 
 Therefore, what we need is a random slope model, where predictors in different wind directions are not only allowed to have differing intercepts, however, where they are also allowed to have different slopes. We draw the response **pm2.5** against the predictors in different wind directions.
 
-```{r function, warning=FALSE, echo=TRUE}
+```{r function, warning=FALSE, echo=FALSE}
 # Multiple plot function----------------------------------------------------------------------------
 #
 # ggplot objects can be passed in ..., or to plotlist (as a list of ggplot objects)
@@ -156,7 +155,7 @@ multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
 }
 ```
 
-```{r plot, warning=FALSE, echo=TRUE, eval=FALSE}
+```{r plot, warning=FALSE, echo=FALSE, eval=FALSE}
 # draw the plots of pm2.5_log_mean vs. predictors in cbwd groups----------------------------------
 p1 = AQ_de %>%
   group_by(cbwd, year) %>%
@@ -220,9 +219,13 @@ multiplot(p1, p2, p3, p4, p5, p6, p7, p8, p9,cols=3)
 knitr::include_graphics("Rplot.png")
 ```
 
-According to the plots, we decide to choose the following model:
+The slopes of hour and PRES are significantly different between groups of combined wind direction.Therefore according to the plots, we decide to choose the following model:
 
-$$pm2.5=year+month+day+hour+pm2.5+DEWP+TEMP+PRES+Iws+Is+Ir+(1+hour+PRES|cbwd)+\epsilon$$
+$$log(pm2.5)=year+month+day+hour+pm2.5+DEWP+TEMP+PRES+Iws+Is+Ir+(1+hour+PRES|cbwd)+\epsilon$$
+
+## Three Approaches {.tabset .tabset-fade}
+
+### **lme4** in R
 
 
 ```{r sum_lme4, warning=FALSE, echo=TRUE}
@@ -233,7 +236,14 @@ res = lmer(pm2.5_log ~ year+month+day+hour+DEWP+TEMP+PRES+Is+Ir+(1+hour+PRES|cbw
 summary(res)
 ```
 We can see hour and PRES are not significant predictors.
-Then we test whether random effects are warranted:
+
+```{r f_a_r, warning=F}
+#plot residual againt fitted values 
+dat=data.frame(fitted.values=as.vector(resc$fitted),residuals=as.vector(resc$residuals))
+ggplot(data=dat,aes(x=fitted.values,y=residuals))+geom_point(color="red",alpha=0.1)+geom_smooth(se=F)
+```
+
+Since the smooth line looks flat, the residuals and fitted values seems to be irrelevant.Then we test whether random effects are warranted:
 
 ```{r test}
 resb = lm(pm2.5_log ~ year+month+day+hour+DEWP+TEMP+PRES+Is+Ir, data = AQ_de)
@@ -293,12 +303,14 @@ BIC(res, resc)
 The coefficients are close to those when using **lme4**, and regression using **lme4** has smaller BIC.
 
 ### Python
+This is the data processing part. Here we add grouping variable "season" according to the months. And then we apply the log transformation on the response varibale according to the Box-Cox plot drawn in R above. Then we remove the outliers according to the boxplot of **log(pm2.5)** against **cbwd**.
+
 ```{python, eval=FALSE}
 import statsmodels.api as sm
 import statsmodels.formula.api as smf
 import pandas as pd
 import numpy as np
-AQ = pd.read_csv('Beijing.csv')
+AQ = pd.read_csv('Beijing.csv')#read data
 dic = {1: "Winter",
        2: "Winter",
        3: "Spring",
@@ -313,8 +325,10 @@ dic = {1: "Winter",
        12: "Winter"}
 AQ['season'] = AQ['month'].map(dic)
 AQ = AQ.dropna()
-AQ = AQ[AQ['pm2.5'] > 0]
-AQ['pm25_log'] = np.log(AQ['pm2.5'])
+AQ = AQ[AQ['pm2.5'] > 0] #remove unresonable response values
+AQ['pm25_log'] = np.log(AQ['pm2.5']) #do the log transformation on the response variable
+
+# remove the outliers
 AQ_cv = AQ[AQ['cbwd'] == 'cv']
 AQ_cv = AQ_cv[(AQ_cv['pm25_log'] > 2.2) & (AQ_cv['pm25_log'] < 6.8)]
 AQ_NE = AQ[AQ['cbwd'] == 'NE']
@@ -325,22 +339,49 @@ AQ_SE = AQ[AQ['cbwd'] == 'SE']
 AQ_SE.sort_values(['pm25_log'], ascending=[False])
 AQ_SE = AQ_SE[(AQ_SE['pm25_log'] > 0.5) & (AQ_SE['pm25_log'] < 6.291569)]
 AQ_new = pd.concat([AQ_cv, AQ_NE, AQ_NW, AQ_SE])
+```
+
+Then we fit the model and print the summary of the fit.
+
+```{python, eval=FALSE}
+#fit the model
 mixed = smf.mixedlm("pm25_log ~ year+month+day+hour+DEWP+TEMP+PRES+Is+Ir", AQ_new, groups = AQ_new["cbwd"], re_formula="~hour+PRES")
 mixed_fit = mixed.fit()
+#print the summary
 print(mixed_fit.summary())
 ```
 
 Here is the output of the Linear Mixed Effect Model in Python. The result is close to the results from the two packages used in R.
 
 ```{r python_out, echo=FALSE, fig.align='left', out.width = '50%'}
-knitr::include_graphics("python_output.png")
+knitr::include_graphics("./python_output.png")
 ```
 
 The coefficients are close to the results from using **lme4** and **nlme**. The result shows that only hour and PRES are not significant, which agrees with the result from using **lme4**.
 
----
+This is the plot of Residual against Fitted values
+```{python, eval=FALSE}
+plt.scatter(AQ_new['pm25_log'] - model.resid, model.resid, alpha = 0.5)
+plt.title("Residual vs. Fitted in Python")
+plt.xlabel("Fitted Values")
+plt.ylabel("Residuals")
+plt.savefig('python_plot.png',dpi=300)
+plt.show()
+```
 
-## Discussion
+
+```{r python_plot, echo=FALSE, fig.align='left', out.width = '50%'}
+knitr::include_graphics("python_plot.png")
+```
+
+##Conclusion
+Here is the comparison of outputs of fit using different tools:
+```{r conclusion, echo=FALSE}
+var_dis = read.csv("final_table.csv")
+colname = c("",	"R(lme4)", "R(nlme)","Python")
+colnames(var_dis) = colname
+knitr::kable(var_dis)
+```
 
 In this study, we applied the linear mixed effects model to Beijing Air Polution Dataset(pm2.5). After removing some of the outliers, we choose the variable "cbwd", the abbreviation of "combined wind direction, as our grouping variable. as random effect to fit the non-linear dataset using mixed effects models.
 This grouping variable is selected based on common sense and plots that help us finding random slopes. As can be seen from the above analyses,
@@ -353,11 +394,10 @@ Therefore, we should pay more attention to model selection when applying Linear 
 In addition, in R, when we use different packages, we should consider which model to use to fit the dataaset. 
 In lmer function(from lme4 library), we used the suggested model, but similarly, in lme function(from nlme library), we got the approximately same result.
 
-## Data source
-[**Beijing PM2.5 Data Data Set** from UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/machine-learning-databases/00381/PRSA_data_2010.1.1-2014.12.31.csv)
 
 ## References
 1.[UCLA: Introduction to Linear Mixed Models - IDRE Stats](https://stats.idre.ucla.edu/other/mult-pkg/introduction-to-linear-mixed-models/)
+
 
 2.[Standford University: Section Week 8 - Linear Mixed Models](https://web.stanford.edu/class/psych252/section/Mixed_models_tutorial.html)
 
